--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,77 +1,107 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --color-background: hsl(var(--background));
-  --color-foreground: hsl(var(--foreground));
+	--color-background: hsl(var(--background));
+	--color-foreground: hsl(var(--foreground));
 
-  --color-card: hsl(var(--card));
-  --color-card-foreground: hsl(var(--card-foreground));
+	--color-card: hsl(var(--card));
+	--color-card-foreground: hsl(var(--card-foreground));
 
-  --color-popover: hsl(var(--popover));
-  --color-popover-foreground: hsl(var(--popover-foreground));
+	--color-popover: hsl(var(--popover));
+	--color-popover-foreground: hsl(var(--popover-foreground));
 
-  --color-primary: hsl(var(--primary));
-  --color-primary-foreground: hsl(var(--primary-foreground));
+	--color-primary: hsl(var(--primary));
+	--color-primary-foreground: hsl(var(--primary-foreground));
 
-  --color-secondary: hsl(var(--secondary));
-  --color-secondary-foreground: hsl(var(--secondary-foreground));
+	--color-secondary: hsl(var(--secondary));
+	--color-secondary-foreground: hsl(var(--secondary-foreground));
 
-  --color-muted: hsl(var(--muted));
-  --color-muted-foreground: hsl(var(--muted-foreground));
+	--color-muted: hsl(var(--muted));
+	--color-muted-foreground: hsl(var(--muted-foreground));
 
-  --color-accent: hsl(var(--accent));
-  --color-accent-foreground: hsl(var(--accent-foreground));
+	--color-accent: hsl(var(--accent));
+	--color-accent-foreground: hsl(var(--accent-foreground));
 
-  --color-destructive: hsl(var(--destructive));
-  --color-destructive-foreground: hsl(var(--destructive-foreground));
+	--color-destructive: hsl(var(--destructive));
+	--color-destructive-foreground: hsl(var(--destructive-foreground));
 
-  --color-border: hsl(var(--border));
-  --color-input: hsl(var(--input));
-  --color-ring: hsl(var(--ring));
+	--color-border: hsl(var(--border));
+	--color-input: hsl(var(--input));
+	--color-ring: hsl(var(--ring));
 
-  --color-chart-1: hsl(var(--chart-1));
-  --color-chart-2: hsl(var(--chart-2));
-  --color-chart-3: hsl(var(--chart-3));
-  --color-chart-4: hsl(var(--chart-4));
-  --color-chart-5: hsl(var(--chart-5));
+	--color-chart-1: hsl(var(--chart-1));
+	--color-chart-2: hsl(var(--chart-2));
+	--color-chart-3: hsl(var(--chart-3));
+	--color-chart-4: hsl(var(--chart-4));
+	--color-chart-5: hsl(var(--chart-5));
 
-  --color-hub-black: #0d1717;
-  --color-hub-green: #068513;
-  --color-hub-green-light: #c9decb;
-  --color-hub-black-sec: #011b04;
-  --color-hub-purple: #850678;
-  --color-hub-grey: #eceff2;
-  --color-hub-grey200: #d9dfe6;
-  --color-hub-blue: #0853c2;
-  --color-hub-purple-light: #7e45dc;
-  --color-hub-orange: #e4871b;
-  --color-hub-red: #cc3535;
+	--color-hub-black: #0d1717;
+	--color-hub-green: #068513;
+	--color-hub-green-light: #c9decb;
+	--color-hub-black-sec: #011b04;
+	--color-hub-purple: #850678;
+	--color-hub-grey: #eceff2;
+	--color-hub-grey200: #d9dfe6;
+	--color-hub-blue: #0853c2;
+	--color-hub-purple-light: #7e45dc;
+	--color-hub-orange: #e4871b;
+	--color-hub-red: #cc3535;
+	--color-hub-subdue: #808080;
 
-  --radius-lg: var(--radius);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-sm: calc(var(--radius) - 4px);
+	--radius-lg: var(--radius);
+	--radius-md: calc(var(--radius) - 2px);
+	--radius-sm: calc(var(--radius) - 4px);
 
-  --animate-accordion-down: accordion-down 0.2s ease-out;
-  --animate-accordion-up: accordion-up 0.2s ease-out;
+	--animate-accordion-down: accordion-down 0.2s ease-out;
+	--animate-accordion-up: accordion-up 0.2s ease-out;
 
-  @keyframes accordion-down {
-    from {
-      height: 0;
-    }
-    to {
-      height: var(--radix-accordion-content-height);
-    }
-  }
-  @keyframes accordion-up {
-    from {
-      height: var(--radix-accordion-content-height);
-    }
-    to {
-      height: 0;
-    }
-  }
+	@keyframes accordion-down {
+		from {
+			height: 0;
+		}
+		to {
+			height: var(--radix-accordion-content-height);
+		}
+	}
+	@keyframes accordion-up {
+		from {
+			height: var(--radix-accordion-content-height);
+		}
+		to {
+			height: 0;
+		}
+	}
+
+	--spacing-shortcut-tab-h: clamp(4rem, 3.6789rem + 1.4679vw, 5rem);
+	--spacing-shortcut-tab-w: clamp(9.75rem, 4.9736rem + 21.8349vw, 24.625rem);
+
+	--spacing-display-card-h: clamp(9rem, 10.6514rem + -1.8349vw, 10.25rem);
+	--spacing-display-card-w: clamp(
+		20.4375rem,
+		10.8647rem + 43.7615vw,
+		50.25rem
+	);
+	--spacing-appointment-card-h: clamp(11.25rem, 10.6881rem + 2.5688vw, 13rem);
+	--spacing-appointment-card-w: clamp(
+		20.4375rem,
+		19.7351rem + 3.211vw,
+		22.625rem
+	);
+
+	--spacing-medication-mini-card-h: 8.25rem;
+	--spacing-medication-mini-card-w: clamp(
+		18rem,
+		16.5149rem + 6.789vw,
+		22.625rem
+	);
+
+	--spacing-scrollable-card-w: clamp(
+		20.4375rem,
+		3.0129rem + 79.6552vw,
+		34.875rem
+	);
 }
 
 /*
@@ -83,37 +113,37 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentcolor);
-  }
+	*,
+	::after,
+	::before,
+	::backdrop,
+	::file-selector-button {
+		border-color: var(--color-gray-200, currentcolor);
+	}
 }
 
 @utility text-balance {
-  text-wrap: balance;
+	text-wrap: balance;
 }
 
 @layer utilities {
-  :root {
-    --background: #ffffff;
-    --foreground: #171717;
-  }
+	:root {
+		--background: #ffffff;
+		--foreground: #171717;
+	}
 
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --background: #0a0a0a;
-      --foreground: #ededed;
-    }
-  }
+	@media (prefers-color-scheme: dark) {
+		:root {
+			--background: #0a0a0a;
+			--foreground: #ededed;
+		}
+	}
 
-  body {
-    color: var(--foreground);
-    background: var(--background);
-    font-family: Arial, Helvetica, sans-serif;
-  }
+	body {
+		color: var(--foreground);
+		background: var(--background);
+		font-family: Arial, Helvetica, sans-serif;
+	}
 }
 
 @layer base {
